--- a/src/Cosanit/CosanitBundle/Resources/translations/messages.en.yml
+++ b/src/Cosanit/CosanitBundle/Resources/translations/messages.en.yml
@@ -1,3 +1,5 @@
-Quelques mots à propos de: A few words about
-Notre: our 
-entreprise: company
+
+title:
+  apropos: A few words about
+  notre: our
+  entreprise: company
