--- a/src/Cosanit/CosanitBundle/Resources/translations/messages.fr.yml
+++ b/src/Cosanit/CosanitBundle/Resources/translations/messages.fr.yml
@@ -2,3 +2,13 @@ title:
   apropos: Quelques mots à propos de
   notre: notre
   entreprise: entreprise
+  Création: Création
+  Site internet: Site internet
+  Logiciel: Logiciel
+  Plateforme web: Plateforme web
+  Marketing web: Marketing web
+  NOTRE SOCIÉTÉ: NOTRE SOCIÉTÉ
+  RÉFÉRENCES: RÉFÉRENCES
+  CONTACT: CONTACT
+
+  
