--- a/src/Cosanit/CosanitBundle/Resources/translations/messages.fr.yml
+++ b/src/Cosanit/CosanitBundle/Resources/translations/messages.fr.yml
@@ -35,6 +35,13 @@ title:
   Foire aux questions: Foire aux questions
   Nos partenaires: Nos partenaires
   Nos prestations: Nos prestations
+  E-mailing: E-mailing
+  Sponsoring réseaux sociaux: Sponsoring réseaux sociaux
+  Publicité Google / Youtube: Publicité Google / Youtube
+  Gestion des réseaux sociaux: Gestion des réseaux sociaux
+  Mapping / Géolocalisation google: Mapping / Géolocalisation google
+
+
   
 
   
