--- a/src/Cosanit/CosanitBundle/Resources/translations/messages.en.yml
+++ b/src/Cosanit/CosanitBundle/Resources/translations/messages.en.yml
@@ -1,5 +1,48 @@
 
 title:
-  apropos: A few words about
-  notre: our
-  entreprise: company
+  apropos: Quelques mots à propos de
+  notre: notre
+  entreprise: entreprise
+  Création: Création
+  Site internet: Site internet
+  Logiciel: Logiciel
+  Plateforme web: Plateforme web
+  Marketing web: Marketing web
+  NOTRE SOCIÉTÉ: NOTRE SOCIÉTÉ
+  RÉFÉRENCES: RÉFÉRENCES
+  CONTACT: CONTACT
+  Notre stratégie: Notre stratégie
+  Création de logo: Création de logo
+  Charte graphique: Charte graphique
+  Site vitrine: Site vitrine
+  Site catalogue: Site catalogue
+  Site e-commerce: Site e-commerce
+  Référencement SEO: Référencement SEO
+  Hébergement web: Hébergement web
+  Facturation: Facturation
+  ERP: ERP
+  Gestion commerciale: Gestion commerciale
+  CRM: CRM
+  Gestion de stock: Gestion de stock
+  Immobilier: Immobilier
+  E-learning / Éducation: E-learning / Éducation
+  Réstaurants / Salons: Réstaurants / Salons
+  Loisirs / Voyages: Loisirs / Voyages
+  Qui sommes nous ?: Qui sommes nous ?
+  Où sommes nous ?: Où sommes nous ?
+  Audit en ligne: Audit en ligne
+  Suivez-nous sur Facebook: Suivez-nous sur Facebook
+  Suivez-nous sur Instagram: Suivez-nous sur Instagram
+  Foire aux questions: Foire aux questions
+  Nos partenaires: Nos partenaires
+  Nos prestations: Nos prestations
+  E-mailing: E-mailing
+  Sponsoring réseaux sociaux: Sponsoring réseaux sociaux
+  Publicité Google / Youtube: Publicité Google / Youtube
+  Gestion des réseaux sociaux: Gestion des réseaux sociaux
+  Mapping / Géolocalisation google: Mapping / Géolocalisation google
+
+
+  
+
+  
