--- a/src/Cosanit/CosanitBundle/Resources/translations/messages.en.yml
+++ b/src/Cosanit/CosanitBundle/Resources/translations/messages.en.yml
@@ -1,6 +1,6 @@
 
 title:
-  apropos: Quelques mots à propos de
+  apropos: aaaa dzzd ff
   notre: notre
   entreprise: entreprise
   Création: Création
