--- a/src/Cosanit/CosanitBundle/Resources/translations/messages.en.yml
+++ b/src/Cosanit/CosanitBundle/Resources/translations/messages.en.yml
@@ -1,46 +1,46 @@
 
 title:
-  apropos: aaaa dzzd ff
-  notre: notre
-  entreprise: entreprise
-  Création: Création
-  Site internet: Site internet
-  Logiciel: Logiciel
-  Plateforme web: Plateforme web
-  Marketing web: Marketing web
-  NOTRE SOCIÉTÉ: NOTRE SOCIÉTÉ
-  RÉFÉRENCES: RÉFÉRENCES
+  apropos: A few words about
+  notre: our
+  entreprise: company
+  Création: Creation
+  Site internet: Website
+  Logiciel: Software
+  Plateforme web: Online platform
+  Marketing web: internet marketing
+  NOTRE SOCIÉTÉ: OUR SOCIETY
+  RÉFÉRENCES: REFERENCES
   CONTACT: CONTACT
-  Notre stratégie: Notre stratégie
-  Création de logo: Création de logo
-  Charte graphique: Charte graphique
-  Site vitrine: Site vitrine
-  Site catalogue: Site catalogue
-  Site e-commerce: Site e-commerce
-  Référencement SEO: Référencement SEO
-  Hébergement web: Hébergement web
-  Facturation: Facturation
+  Notre stratégie: Our strategy
+  Création de logo: Logo design
+  Charte graphique: Graphical charter
+  Site vitrine: Showcase site
+  Site catalogue: Catalog website
+  Site e-commerce: E-commerce website
+  Référencement SEO: SEO referencing
+  Hébergement web: Web hosting
+  Facturation: Billing
   ERP: ERP
-  Gestion commerciale: Gestion commerciale
+  Gestion commerciale: Business management
   CRM: CRM
-  Gestion de stock: Gestion de stock
-  Immobilier: Immobilier
-  E-learning / Éducation: E-learning / Éducation
-  Réstaurants / Salons: Réstaurants / Salons
-  Loisirs / Voyages: Loisirs / Voyages
-  Qui sommes nous ?: Qui sommes nous ?
-  Où sommes nous ?: Où sommes nous ?
-  Audit en ligne: Audit en ligne
-  Suivez-nous sur Facebook: Suivez-nous sur Facebook
-  Suivez-nous sur Instagram: Suivez-nous sur Instagram
-  Foire aux questions: Foire aux questions
-  Nos partenaires: Nos partenaires
-  Nos prestations: Nos prestations
-  E-mailing: E-mailing
-  Sponsoring réseaux sociaux: Sponsoring réseaux sociaux
-  Publicité Google / Youtube: Publicité Google / Youtube
-  Gestion des réseaux sociaux: Gestion des réseaux sociaux
-  Mapping / Géolocalisation google: Mapping / Géolocalisation google
+  Gestion de stock: Inventory management
+  Immobilier: Real estate
+  E-learning / Éducation: E-learning / Education
+  Réstaurants / Salons: Restaurants / Lounges
+  Loisirs / Voyages: Leisure / Travel
+  Qui sommes nous ?: Who are we ?
+  Où sommes nous ?: Where are we ?
+  Audit en ligne: Online Audit
+  Suivez-nous sur Facebook: Follow us on Facebook
+  Suivez-nous sur Instagram: Follow us on Instagram
+  Foire aux questions: Frequently Asked Questions
+  Nos partenaires: Our partners
+  Nos prestations: Our services
+  E-mailing: Emailing
+  Sponsoring réseaux sociaux: Social media sponsorship
+  Publicité Google / Youtube: Google/Youtube Advertising
+  Gestion des réseaux sociaux: Social media management
+  Mapping / Géolocalisation google: Mapping / Google geolocation
 
 
   
