--- a/src/Cosanit/CosanitBundle/Resources/translations/messages.fr.yml
+++ b/src/Cosanit/CosanitBundle/Resources/translations/messages.fr.yml
@@ -41,6 +41,44 @@ title:
   Gestion des réseaux sociaux: Gestion des réseaux sociaux
   Mapping / Géolocalisation google: Mapping / Géolocalisation google
 
+  # /// BANNIERES ///
+  
+title:
+  LE PACK: LE PACK
+  ÉCONOMIQUE: ÉCONOMIQUE
+  pour un site web simple et rapide: pour un site web simple et rapide.
+  ✔ Nom de domaine et hébergement INCLUT: ✔ Nom de domaine et hébergement INCLUT.
+  ✔ 1 page web (Site OnePage): ✔ 1 page web (Site OnePage).
+  ✔ 1 Adresse mail (Pro): ✔ 1 Adresse mail (Pro).
+  ✔ Formulaire de contact: ✔ Formulaire de contact.
+  PRIX1: 3500 DA/Mois ou 35 000 DA
+  Commander: Commander
+
+  SITE VITRINE: SITE VITRINE
+  pour une vitrine sur le web: pour une vitrine sur le web.
+  ✔ 5 pages web: ✔ 5 pages web.
+  ✔ 5 Adresses mail: ✔ 5 Adresses mail.
+  ✔ Structure web personnalisée: ✔ Structure web personnalisée.
+  ✔ Version mobile: ✔ Version mobile.
+  ✔ Statistiques: ✔ Statistiques.
+  PRIX2: 5500 DA/Mois ou 60 000 DA
+
+  LE PLUS COMPLET: LE PLUS COMPLET
+  pour vous imposer sur la toile: pour vous imposer sur la toile.
+  ✔ 10 pages web: ✔ 10 pages web.
+  ✔ Site responsive: ✔ Site responsive.
+  ✔ Référencement: ✔ Référencement.
+  ✔ Module actualités: ✔ Module actualités.
+  ✔ Pages administrable: ✔ Pages administrable.
+  PRIX3: 8500 DA/Mois ou 90 000 DA
+
+  E-COMMERCE: E-COMMERCE
+  pour booster vos ventes en ligne: pour booster vos ventes en ligne.
+  ✔ Pages web ILLIMITÉES: ✔ Pages web ILLIMITÉES.
+  ✔ 10 Adresses mail: ✔ 10 Adresses mail.
+  ✔ Structure web AU CHOIX: ✔ Structure web AU CHOIX.
+  PRIX4: 13 000 DA/Mois ou 140 000 DA
+
 
   
 
