--- a/src/Cosanit/CosanitBundle/Resources/translations/messages.en.yml
+++ b/src/Cosanit/CosanitBundle/Resources/translations/messages.en.yml
@@ -42,7 +42,43 @@ title:
   Gestion des réseaux sociaux: Social media management
   Mapping / Géolocalisation google: Mapping / Google geolocation
 
+ # /// BANNIERES ///
+  
+title:
+  LE PACK: THE PACK
+  ÉCONOMIQUE: ECONOMIC
+  pour un site web simple et rapide: for a simple and fast website.
+  ✔ Nom de domaine et hébergement INCLUT: ✔ Domain name and hosting INCLUDED.
+  ✔ 1 page web (Site OnePage): ✔ 1 webpage (OnePage website).
+  ✔ 1 Adresse mail (Pro): ✔ 1 Email address.
+  ✔ Formulaire de contact: ✔ Contact form.
+  PRIX1: 25,55$ /Month Or 255,50$
+  Commander: Order now
 
+  SITE VITRINE: SHOWCASE SITE
+  pour une vitrine sur le web: for a showcase on the web.
+  ✔ 5 pages web: ✔ 5 Webpages.
+  ✔ 5 Adresses mail: ✔ 5 Email address.
+  ✔ Structure web personnalisée: ✔ Custom web structure.
+  ✔ Version mobile: ✔ Mobile version.
+  ✔ Statistiques: ✔ Statistics.
+  PRIX2: 40$ /Month Or 437$
+
+  LE PLUS COMPLET: THE MOST COMPLETE
+  pour vous imposer sur la toile: to impose yourself on the web.
+  ✔ 10 pages web: ✔ 10 Webpages.
+  ✔ Site responsive: ✔ Responsive website.
+  ✔ Référencement: ✔ SEO.
+  ✔ Module actualités: ✔ News module.
+  ✔ Pages administrable: ✔ Manageable Pages.
+  PRIX3: 62$ /Month Or 656$
+
+  E-COMMERCE: E-COMMERCE
+  pour booster vos ventes en ligne: to boost your online sales.
+  ✔ Pages web ILLIMITÉES: ✔ UNLIMITED webpages.
+  ✔ 10 Adresses mail: ✔ 10 Email address.
+  ✔ Structure web AU CHOIX: ✔ CHOICE of web structure.
+  PRIX4: 95$ /Month Or 1 000$
   
 
   
