--- a/src/Cosanit/CosanitBundle/Resources/translations/messages.ar.yml
+++ b/src/Cosanit/CosanitBundle/Resources/translations/messages.ar.yml
@@ -45,34 +45,34 @@ title:
   LE PACK: الحزمة
   ÉCONOMIQUE: الاقتصادية
   pour un site web simple et rapide: لموقع ويب بسيط وسريع
-  Nom de domaine et hébergement INCLUT: ✔ يشمل اسم المجال والاستضافة
-  1 page web (Site OnePage): ✔ 1 صفحة ويب (موقع OnePage)
-  1 Adresse mail (Pro): ✔ 1 عنوان بريد إلكتروني 
-  Formulaire de contact: ✔ نموذج الاتصال.
-  PRIX1: 3500دج \ الشهر أو 3500دج
+  Nom de domaine et hébergement INCLUT: يشمل اسم المجال والاستضافة ✔ 
+  1 page web (Site OnePage): 1 صفحة ويب  (موقع OnePage) ✔
+  1 Adresse mail (Pro): 1 عنوان بريد إلكتروني ✔ 
+  Formulaire de contact:  نموذج الاتصال ✔
+  PRIX1:  دج /الشهر أو 35 000دج  
   Commander: اطلب الان
   SITE VITRINE: موقع عرض النتجات
 
   pour une vitrine sur le web: لعرض المنتجات على الويب
-  5 pages web: ✔ 5 صفحات الانترنت
-  5 Adresses mail: ✔ 5 عناوين البريد الإلكتروني
-  Structure web personnalisée: ✔ هيكل ويب مخصص
-  Version mobile: ✔ نسخة الهاتف الذكي
-  Statistiques: ✔ إحصائيات
-  PRIX2: 5500دج \ الشهر أو 60 000دج
+  5 pages web:  5 صفحات الانترنت ✔
+  5 Adresses mail: 5 عناوين البريد الإلكتروني ✔
+  Structure web personnalisée:  هيكل ويب مخصص ✔
+  Version mobile:  نسخة الهاتف الذكي ✔
+  Statistiques:  إحصائيات ✔
+  PRIX2:  دج /الشهر أو 60 000دج  
 
   LE PLUS COMPLET: الأكثر اكتمالا
   pour vous imposer sur la toile: لفرض نفسك على الويب
-  10 pages web: ✔ 10 صفحات ويب
-  Site responsive: ✔ الموقع مستجيب للجوال
-  Référencement: ✔ تحسين محرك البحث
-  Module actualités: ✔ وحدة الواقع
-  Pages administrable: ✔ يمكن إدارة الصفحات
-  PRIX3: 8500 دج \ الشهر أو 90 000دج
+  10 pages web:  صفحات ويب 1 ✔
+  Site responsive: الموقع مستجيب للجوال ✔
+  Référencement:  تحسين محرك البحث ✔
+  Module actualités:  وحدة الواقع ✔
+  Pages administrable:  يمكن إدارة الصفحات ✔
+  PRIX3:  دج \ الشهر أو 90 000دج
 
   E-COMMERCE: التجارة الإلكترونية
   pour booster vos ventes en ligne: لزيادة مبيعاتك عبر الإنترنت
-  Pages web ILLIMITÉES: ✔ صفحات ويب غير محدودة
-  10 Adresses mail: ✔ 10 عناوين بريد إلكتروني
-  Structure web AU CHOIX: ✔ اختيار هيكل الويب
-  PRIX4: 13 000 دج \ الشهر أو 140 000دج
+  Pages web ILLIMITÉES:  صفحات ويب غير محدودة ✔
+  10 Adresses mail: 10 عناوين بريد إلكتروني ✔
+  Structure web AU CHOIX:  اختيار هيكل الويب ✔
+  PRIX4: دج \ الشهر أو 140 000دج
