--- a/src/Cosanit/CosanitBundle/Resources/translations/messages.ar.yml
+++ b/src/Cosanit/CosanitBundle/Resources/translations/messages.ar.yml
@@ -1,4 +1,4 @@
-title:
+﻿title:
   apropos: بضع كلمات عن
   notre: notre
   entreprise: شركتنا
@@ -49,7 +49,7 @@ title:
   1 page web (Site OnePage): 1 صفحة ويب  (موقع OnePage) ✔
   1 Adresse mail (Pro): 1 عنوان بريد إلكتروني ✔ 
   Formulaire de contact:  نموذج الاتصال ✔
-  PRIX1:  دج /الشهر أو 35 000دج  
+  PRIX1:  دج /الشهر أو 35 000دج &nbsp; 3 500  
   Commander: اطلب الان
   SITE VITRINE: موقع عرض النتجات
 
@@ -68,7 +68,7 @@ title:
   Référencement:  تحسين محرك البحث ✔
   Module actualités:  وحدة الواقع ✔
   Pages administrable:  يمكن إدارة الصفحات ✔
-  PRIX3:  دج \ الشهر أو 90 000دج
+  PRIX3:  دج \الشهر أو 90 000دج
 
   E-COMMERCE: التجارة الإلكترونية
   pour booster vos ventes en ligne: لزيادة مبيعاتك عبر الإنترنت
