--- a/src/Cosanit/CosanitBundle/Resources/translations/messages.ar.yml
+++ b/src/Cosanit/CosanitBundle/Resources/translations/messages.ar.yml
@@ -49,7 +49,7 @@ title:
   1 page web (Site OnePage): 1 صفحة ويب  (موقع OnePage) ✔
   1 Adresse mail (Pro): 1 عنوان بريد إلكتروني ✔ 
   Formulaire de contact:  نموذج الاتصال ✔
-  PRIX1:  دج /الشهر أو 35 000دج &nbsp; 3 500  
+  PRIX1: ب 3 500 /الشهر أو 35 000دج 
   
   Commander: اطلب الان
   SITE VITRINE: موقع عرض النتجات
