--- a/src/Cosanit/CosanitBundle/Resources/translations/messages.ar.yml
+++ b/src/Cosanit/CosanitBundle/Resources/translations/messages.ar.yml
@@ -48,7 +48,7 @@ Nom de domaine et hébergement INCLUT: يشمل اسم المجال والاست
 1 page web (Site OnePage): 1 صفحة ويب  (موقع OnePage) ✔
 1 Adresse mail (Pro): 1 عنوان بريد إلكتروني ✔ 
 Formulaire de contact:  نموذج الاتصال ✔
-PRIX1: ب 3500دج /الشهر أو 35000دج
+PRIX1: بسعر 3500دج /الشهر أو 35000دج
 
 Commander: اطلب الان
 SITE VITRINE: موقع عرض النتجات
@@ -59,7 +59,8 @@ pour une vitrine sur le web: لعرض المنتجات على الويب
 Structure web personnalisée:  هيكل ويب مخصص ✔
 Version mobile:  نسخة الهاتف الذكي ✔
 Statistiques:  إحصائيات ✔
-PRIX2:  دج /الشهر أو 60 000دج  
+PRIX2: بسعر 5500دج /الشهر أو 60000دج
+
 
 LE PLUS COMPLET: الأكثر اكتمالا
 pour vous imposer sur la toile: لفرض نفسك على الويب
@@ -68,7 +69,7 @@ Site responsive: الموقع مستجيب للجوال ✔
 Référencement:  تحسين محرك البحث ✔
 Module actualités:  وحدة الواقع ✔
 Pages administrable:  يمكن إدارة الصفحات ✔
-PRIX3:  دج \الشهر أو 90 000دج
+PRIX2: بسعر 8500دج /الشهر أو 90000دج
 
 E-COMMERCE: التجارة الإلكترونية
 pour booster vos ventes en ligne: لزيادة مبيعاتك عبر الإنترنت
@@ -76,3 +77,4 @@ Pages web ILLIMITÉES:  صفحات ويب غير محدودة ✔
 10 Adresses mail: 10 عناوين بريد إلكتروني ✔
 Structure web AU CHOIX:  اختيار هيكل الويب ✔
 PRIX4: دج \ الشهر أو 140 000دج
+PRIX4: بسعر 13000دج /الشهر أو 140000دج
