--- a/src/Cosanit/CosanitBundle/Resources/translations/messages.ar.yml
+++ b/src/Cosanit/CosanitBundle/Resources/translations/messages.ar.yml
@@ -16,6 +16,7 @@ Site vitrine: موقع عرض النتجات
 Site catalogue: موقع الكتالوج
 Site e-commerce: موقع التجارة الإلكترونية
 Référencement SEO: مراجع تحسين محركات البحث
+Reférencement SEO: مراجع تحسين محركات البحث
 Hébergement web: إستضافة المواقع الإلكترونية
 Facturation: الفواتير
 ERP: تخطيط موارد المؤسسات
