--- a/src/Cosanit/CosanitBundle/Resources/translations/messages.ar.yml
+++ b/src/Cosanit/CosanitBundle/Resources/translations/messages.ar.yml
@@ -21,7 +21,7 @@ Hébergement web: إستضافة المواقع الإلكترونية
 Facturation: الفواتير
 ERP: تخطيط موارد المؤسسات
 Gestion commerciale: ادارة اعمال
-CRM: CRM
+CRM: إدارة علاقات العملاء
 Gestion de stock: إدارة علاقات العملاء
 Immobilier: العقارات
 E-learning / Éducation: التعلم الإلكتروني / التعليم
