--- a/src/Cosanit/CosanitBundle/Resources/translations/messages.ar.yml
+++ b/src/Cosanit/CosanitBundle/Resources/translations/messages.ar.yml
@@ -1,6 +1,6 @@
 apropos:  بضع كلمات عن
-notre: شركتنا
-entreprise: 
+notre: .
+entreprise: شركتنا
 Création: تأسيس
 Site internet: موقع انترنت
 Logiciel: برمجة
