--- a/src/Cosanit/CosanitBundle/Resources/translations/messages.ar.yml
+++ b/src/Cosanit/CosanitBundle/Resources/translations/messages.ar.yml
@@ -49,7 +49,7 @@ Nom de domaine et hébergement INCLUT: يشمل اسم المجال والاست
 1 page web (Site OnePage): 1 صفحة ويب  (موقع OnePage) ✔
 1 Adresse mail (Pro): 1 عنوان بريد إلكتروني ✔ 
 Formulaire de contact:  نموذج الاتصال ✔
-PRIX1: بسعر 3 500دج /الشهر أو 35000دج
+PRIX1: بسعر 3500دج /الشهر أو 35000دج
 
 Commander: اطلب الان
 SITE VITRINE: موقع عرض النتجات
