--- a/src/Cosanit/CosanitBundle/Resources/translations/messages.ar.yml
+++ b/src/Cosanit/CosanitBundle/Resources/translations/messages.ar.yml
@@ -47,7 +47,7 @@ LE PACKK: حزمة
 ÉCONOMIQUE: الاقتصادية
 pour un site web simple et rapide: لموقع ويب بسيط وسريع
 Nom de domaine et hébergement INCLUT: يشمل اسم المجال والاستضافة ✔ 
-1 page web (Site OnePage): 1 صفحة ويب  (موقع OnePage) ✔
+1 page web (Site OnePage): (OnePage موقع) صفحة 1 ويب  ✔
 1 Adresse mail (Pro): 1 عنوان بريد إلكتروني ✔ 
 Formulaire de contact:  نموذج الاتصال ✔
 PRIX1: بسعر 3500دج /الشهر أو 35000دج
